Basic versions of figure captions

--- a/92-appendixC.Rmd
+++ b/92-appendixC.Rmd
@@ -280,23 +280,33 @@ Table: (\#tab:tmb-lookup) Correspondence between the variable name used in the N
 
 ## NUTS convergence and suitability
 
-```{r rhat, fig.cap="The potential scale reduction factor compares between- and within- estimates of univariate parameters. It is generally recommended only to use NUTS results if the potential scale reduction factor is less than 1.05. Here it is for all parameters."}
+(ref:rhat) The potential scale reduction factor $\hat R$ was less than 1.05 for all parameters.
+
+```{r rhat, fig.cap="(ref:rhat)"}
 knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/rhat.png"))
 ```
 
-```{r ess, fig.cap="Figure caption."}
+(ref:ess) The efficiency of the NUTS was relatively low for most parameters, as measured by a ratio of effective sample size to iterations (Panel A). Many iterations were required for the the effective number of samples obtained to be satisfactory (Panel B). 
+
+```{r ess, fig.cap="(ref:ess)"}
 knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/ess.png"))
 ```
 
-```{r worst-trace, fig.cap="Figure caption."}
+(ref:worst-trace) Traceplots for the parameters with the worst effective sample size $\text{ESS}$ and potential scale reduction factor $\hat R$. These were `log_sigma_alpha_xs` and `ui_lambda_x[10]`. 
+
+```{r worst-trace, fig.cap="(ref:worst-trace)"}
 knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/worst-trace.png"))
 ```
 
-```{r rho-a, fig.cap="Figure caption."}
+(ref:rho-a) Pairs plots for `log_sigma_rho_a` and `logit_phi_rho_a`. 
+
+```{r rho-a, fig.cap="(ref:rho-a)"}
 knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/rho_a.png"))
 ```
 
-```{r alpha-x, fig.cap="Figure caption."}
+(ref:alpha-x) Pairs plots for `log_sigma_alpha_x` and `logit_phi_alpha_x`. 
+
+```{r alpha-x, fig.cap="(ref:alpha-x)"}
 knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/alpha_x.png"))
 ```
 
