Update main text for Naomi NUTS

--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -107,9 +107,8 @@ Based on this evidence, VMMC has been recommended since 2007 by the World Health
 Scale up of VMMC across 15 priority countries between 2008 and 2019 is estimated to have already averted `r custom_numbers_to_words(vmmc_infections_averted)` new HIV infections, though the future number of new HIV infections averted is likely to be much higher.
 
 * Pre-exposure prophylaxis (PrEP) and post-exposure prophylaxis (PEP) are antiretroviral drugs which can be taken before and after exposure to prevent transmission.
-PrEP and PEP are more costly than some other prevention options, so primarily useful in high risk settings.
-
-<!-- PrEP has high individual-level effectivenss but there are few population-level studies. -->
+PrEP and PEP have been shown to be effective at an individual-level, but there are few population-level studies.
+These medical interventions are more costly than some other options, so are primarily useful in high risk settings.
 
 Though important progress had been made, facilitated by the interventions above, there remains much more to do.
 In 2022, `r custom_numbers_to_words(infections2022)` people were newly infected with HIV and there were `r custom_numbers_to_words(deaths2022)` AIDS-related deaths, more than one every minute [@unaids2022global].
